# jigyasa-mcp

./: .gitignore  CHANGELOG.md  README.md  build_proto.py  pyproject.toml
.github/copilot-skills/: jigyasa-setup.md
.github/workflows/: ci.yml
hooks/: jigyasa-hook.bat  jigyasa-hook.sh
src/jigyasa_mcp/: __init__.py  __main__.py  cli.py  code_intel.py  dpSearch_pb2.py  dpSearch_pb2_grpc.py  git_history.py  grpc_client.py  jdt_lsp.py  jigyasa_launcher.py  registry.py
src/jigyasa_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jigyasa_mcp/indexer/: chunker.py  embeddings.py  generic_ast_chunker.py  lang_registry.py  pipeline.py
src/jigyasa_mcp/schemas/: collections.py
src/jigyasa_mcp/server/: highlighter.py  mcp_server.py  reranker.py  validation.py
tests/: test_chaos_monkey.py  test_chunker.py  test_code_intel.py  test_git_history.py  test_grpc_client.py  test_multi_lang.py  test_pipeline.py  test_validation.py
